# crossuo

./: .travis.yml  CMakeLists.txt
.github/: code-checks.sh  package.cmd  package.sh
.github/workflows/: build.yml
CMake/: Dependencies.cmake  FindGLESv2.cmake
common/: fs.h
resources/: client.rc
shaders/: uber.fs  uber.vs
src/: Backend.h  CMakeLists.txt  CrossUO.cpp  Globals.h  ShaderData.h
src/GLEngine/: GLEngine.cpp  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
src/Renderer/: RenderAPI.h  RenderDebug.cpp  RenderDraw.cpp  RenderInternal.cpp  RenderInternal.h  RenderState.cpp  RenderTypes.h
src/Utility/: PerfMarker.cpp
src/Wisp/: WispWindow.cpp
tools/gfxtest/: main.cpp
tools/xuoi/: CMakeLists.txt  xuolauncher.cpp  xuolauncher.rc
